<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <TextView
        android:id="@+id/txt_heading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/update"
        android:gravity="center"
        android:textColor="@color/teal_700"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_edtTitle"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_heading">
        <EditText
            android:id="@+id/edt_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:textSize="14sp"
            android:hint="@string/enter_product_name"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edtDesc"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_edtTitle">
        <EditText
            android:id="@+id/edt_desc"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:textSize="14sp"
            android:hint="@string/pdt_description"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edtprice"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_margin="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_edtDesc">
        <EditText
            android:id="@+id/edt_price"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp"
            android:textSize="14sp"
            android:inputType="number"
            android:hint="@string/product_price"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_lat"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_edtprice">
        <EditText
            android:id="@+id/edt_lat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:padding="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/latitude"
            android:background="@android:color/transparent"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_lng"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_edtprice">
        <EditText
            android:id="@+id/edt_lng"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="14sp"
            android:padding="10dp"
            android:inputType="numberDecimal"
            android:hint="@string/longitude"
            android:background="@android:color/transparent"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_update_product"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10sp"
        android:textColor="@color/white"
        android:elevation="20sp"
        android:text="@string/update_product"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_lat"/>
</androidx.constraintlayout.widget.ConstraintLayout>