<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProductDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_notes"
        android:background="@color/purple_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_show_all"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:padding="8dp"
                android:src="@drawable/ic_baseline_home_24" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="350dp"
        tools:context=".MapsActivity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_notes"/>

    <TextView
        android:id="@+id/pdt_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/product_name_title"
        android:textStyle="bold"
        android:textColor="@color/purple_500"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"/>

    <TextView
        android:id="@+id/pdt_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/product_price"
        android:textStyle="bold"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="end"
        app:layout_constraintStart_toEndOf="@+id/pdt_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map"/>
    <TextView
        android:id="@+id/pdt_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/description"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pdt_title"/>

    <TextView
        android:id="@+id/pdt_provider_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/location"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:drawableStart="@drawable/ic_location"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pdt_desc"/>


</androidx.constraintlayout.widget.ConstraintLayout>